Actu v5.0 - Implementacion de Base de datos

--- a/ApiMatematicas/appsettings.json
+++ b/ApiMatematicas/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-EROLTAG\\SQLEXPRESS;Database=LaCupula;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "bSmk9gXOE7jQE3o1267ZWKme17n8xYbQ",
+    "Issuer": "ApiMatematicas",
+    "Audience": "UsuariosWeb",
+    "DurationInMinutes": 60
+  }
 }
