Actu v5.3 - Controlador-OlvidasteTuContraseña

--- a/ApiMatematicas/appsettings.json
+++ b/ApiMatematicas/appsettings.json
@@ -14,5 +14,15 @@
     "Issuer": "ApiMatematicas",
     "Audience": "UsuariosWeb",
     "DurationInMinutes": 60
+  },
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "LaCupula App",
+    "SenderEmail": "lacupulabot@gmail.com",
+    "Account": "lacupulabot@gmail.com",
+    "Password": "pnfi vjtt pkny gwet",
+    "Security": true
   }
+
 }
