--- a/ApiMatematicas/appsettings.json
+++ b/ApiMatematicas/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-EROLTAG\\SQLEXPRESS;Database=LaCupula;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Host=db.aqyrkcozysrkftpqfazc.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=PLACEHOLDER;"
   },
   "Jwt": {
-    "Key": "bSmk9gXOE7jQE3o1267ZWKme17n8xYbQ",
+    "Key": "JWT_KEY",
     "Issuer": "ApiMatematicas",
     "Audience": "UsuariosWeb",
     "DurationInMinutes": 60
